--- a/entrega4/informe/usuario.tex
+++ b/entrega4/informe/usuario.tex
@@ -1,16 +1,16 @@
 \documentclass[a4paper,oneside]{report}
 \usepackage[spanish]{babel}
-\usepackage[utf8]{inputenc}
+\usepackage[latin1]{inputenc}
 \usepackage{fullpage}
 %\usepackage{listings}
 %\usepackage{fancyvrb}
 \usepackage{float}
 \usepackage[colorlinks=true,urlcolor=black,linkcolor=black,citecolor=black]{hyperref}
-%\usepackage{gmverb}
+\usepackage{gmverb}
 
 \setlength{\parskip}{1ex plus 0.5ex minus 0.2ex}
 
-\title{Compiladores e Int√©rpretes\\Manual del Usuario}
+\title{Compiladores e IntÈrpretes\\Manual del Usuario}
 
 \author{Diego Marcovecchio (LU: 83815)\and Leonardo Molas (LU: 82498)}
 
@@ -23,16 +23,16 @@
 \tableofcontents
 
 
-\chapter*{Introducci√≥n} 
+\chapter*{IntroducciÛn} 
 
-\addcontentsline{toc}{chapter}{Introducci√≥n}
+\addcontentsline{toc}{chapter}{IntroducciÛn}
 
-Este es el Manual del Usuario del Compilador de Mini-Pascal \textsc{pyComp}. En los cap√≠tulos encontrados a continuaci√≥n detallaremos la utilizaci√≥n en general del compilador, el lenguaje y los s√≠mbolos utilizados, el alcance del compilador, los tipos de datos cubiertos, la forma de uso del lenguaje, y las decisiones de dise√±o tomadas.
+Este es el Manual del Usuario del Compilador de Mini-Pascal \textsc{pyComp}. En los capÌtulos encontrados a continuaciÛn detallaremos la utilizaciÛn en general del compilador, el lenguaje y los sÌmbolos utilizados, el alcance del compilador, los tipos de datos cubiertos, la forma de uso del lenguaje, y las decisiones de diseÒo tomadas.
 
 \chapter{Modo de Uso}
 
 \section{Requerimientos}
-Para ejecutar el compilador es necesario contar con las siguientes librer√≠as (que pueden encontrarse en la carpeta entregada a la c√°tedra).
+Para ejecutar el compilador es necesario contar con las siguientes librerÌas (que pueden encontrarse en la carpeta entregada a la c·tedra).
 
 \begin{itemize}\ttfamily
 	\item python27.dll
@@ -40,10 +40,10 @@ Para ejecutar el compilador es necesario contar con las siguientes librer√≠as (q
 	\item bz2.pyd
 	\item select.pyd
 	\item unicodedata.pyd
-	\item library.zip \rmfamily (que contiene las librer√≠as de Python utilizadas)
+	\item library.zip \rmfamily (que contiene las librerÌas de Python utilizadas)
 \end{itemize}
 
-\section{Ejecuci√≥n}
+\section{EjecuciÛn}
 
 \verb|pyComp IN_FILE [OUT_FILE] [-h] [-d] [-o DISPLAY_FILE]|
 
@@ -56,24 +56,24 @@ Para ejecutar el compilador es necesario contar con las siguientes librer√≠as (q
 \subsection*{Argumentos opcionales}
 
 \begin{description}
-	\item[\ttfamily OUT\_FILE] El archivo opcional de salida. En caso de especificarse, en √©ste archivo se generar√° el c√≥digo MEPa correspondiente a {\ttfamily IN\_FILE}; en caso de no especificarse, se remover√°n los √∫ltimos tres caracteres del {\ttfamily IN\_FILE}, y se reemplazar√°n por \"mepa\", creando un nuevo archivo con ese nombre.
+	\item[\ttfamily OUT\_FILE] El archivo opcional de salida. En caso de especificarse, en Èste archivo se generar· el cÛdigo MEPa correspondiente a {\ttfamily IN\_FILE}; en caso de no especificarse, se remover·n los ˙ltimos tres caracteres del {\ttfamily IN\_FILE}, y se reemplazar·n por \"mepa\", creando un nuevo archivo con ese nombre.
 	\item[\ttfamily -d] Modo \textit{debug} (utilizado durante el desarrollo, y dejado por la posible utilidad en el futuro).
 	\item[\ttfamily -h, --help] Muestra la ayuda por pantalla.
-	\item[\ttfamily -o DISPLAY\_FILE] Hace que la salida del compilador se muestre en el archivo {\ttfamily DISPLAY\_FILE}. Por defecto, {\ttfamily DISPLAY\_FILE} es el archivo de salida standard del sistema operativo, por lo que de no especificarse, la salida ser√° realizada por la pantalla.
+	\item[\ttfamily -o DISPLAY\_FILE] Hace que la salida del compilador se muestre en el archivo {\ttfamily DISPLAY\_FILE}. Por defecto, {\ttfamily DISPLAY\_FILE} es el archivo de salida standard del sistema operativo, por lo que de no especificarse, la salida ser· realizada por la pantalla.
 \end{description}
 
 \section{Formato de la salida}
-La salida por pantalla de \emph{pyComp} mostrar√° un mensaje de √©xito si el programa es correcto, o bien un mensaje de error indicando el tipo de error, y el n√∫mero de l√≠nea en el que fue detectado.
+La salida por pantalla de \emph{pyComp} mostrar· un mensaje de Èxito si el programa es correcto, o bien un mensaje de error indicando el tipo de error, y el n˙mero de lÌnea en el que fue detectado.
 
 Los errores posiblemente devueltos son:
 
 \begin{itemize}
-  \item \emph{Lexical error}: ocurre cuando el compilador se topa con un s√≠mbolo desconocido. La lista de s√≠mbolos v√°lidos puede ser encontrada en el cap√≠tulo correspondiente a \textbf{Lenguaje}.
-  \item \emph{Syntactical error}: ocurre cuando el compilador encuentra una sentencia que viola la gram√°tica definida.
-  \item \emph{Semantical error}: ocurre cuando se viola alguna de las reglas sem√°nticas definidas por el compilador; por ejemplo, cuando se referencia a una variable que no fue definida anteriormente, cuando se asignan dos elementos de tipos incompatibles, o cuando se declaran dos variables con el mismo identificador.
+  \item \emph{Lexical error}: ocurre cuando el compilador se topa con un sÌmbolo desconocido. La lista de sÌmbolos v·lidos puede ser encontrada en el capÌtulo correspondiente a \textbf{Lenguaje}.
+  \item \emph{Syntactical error}: ocurre cuando el compilador encuentra una sentencia que viola la gram·tica definida.
+  \item \emph{Semantical error}: ocurre cuando se viola alguna de las reglas sem·nticas definidas por el compilador; por ejemplo, cuando se referencia a una variable que no fue definida anteriormente, cuando se asignan dos elementos de tipos incompatibles, o cuando se declaran dos variables con el mismo identificador.
 \end{itemize}
 
-Por a√±adidura, se informar√° por pantalla en forma de \texttt{warning} cuando haya variables, funciones o procedimientos declarados que no hayan sido utilizados.
+Por aÒadidura, se informar· por pantalla en forma de \texttt{warning} cuando haya variables, funciones o procedimientos declarados que no hayan sido utilizados.
 
 \begin{figure}[h]
 \begin{verbatim}
@@ -82,7 +82,7 @@ Starting file lexical and syntactical analysis...
 
 The program is syntactically correct.
 \end{verbatim}
-\caption{Salida por pantalla de un programa sint√°cticamente correcto}
+\caption{Salida por pantalla de un programa sint·cticamente correcto}
 \label{fig:correct}
 \end{figure}
 
@@ -97,7 +97,7 @@ Starting file lexical and syntactical analysis...
 "bateria\ejemplo10.pas", line 9: Syntactical error found: Expecting "," or ":",
 	but ":=" was found
 \end{verbatim}
-\caption{Salida por pantalla de un programa con un error sint√°ctico}
+\caption{Salida por pantalla de un programa con un error sint·ctico}
 \label{fig:error}
 \end{figure}
 
@@ -117,11 +117,11 @@ The program is syntactically correct.
 \label{fig:warning}
 \end{figure}
 
-\chapter{Especificaci√≥n completa del lenguaje}
+\chapter{EspecificaciÛn completa del lenguaje}
 
-\section{An√°lisis l√©xico}
+\section{An·lisis lÈxico}
 
-En esta secci√≥n definiremos todos los s√≠mbolos v√°lidos en el lenguaje Mini-Pascal. √âstos se dividen en letras, n√∫meros, y s√≠mbolos especiales (dentro de los que se consideran tambi√©n las palabras reservadas).
+En esta secciÛn definiremos todos los sÌmbolos v·lidos en el lenguaje Mini-Pascal. …stos se dividen en letras, n˙meros, y sÌmbolos especiales (dentro de los que se consideran tambiÈn las palabras reservadas).
 
 \begin{verbatim}
 <letter> ::= A | B | C | D | E | F | G | H | I | J | K | L | M | N | O | P | Q | R | S | T | U | V | W | X | Y | Z | a | b | c | d | e | f | g | h | i | j | k | l | m | n | o | p | q | r | s | t | u | v | w | x | y | z
@@ -133,16 +133,16 @@ En esta secci√≥n definiremos todos los s√≠mbolos v√°lidos en el lenguaje Mini-Pa
 
 \subsection{Comentarios}
 
-Los comentarios son bloques de texto que se encuentran en el source del programa, pero son ignorados por el analizador l√©xico y no generan c√≥digo intermedio. Pueden contener cualquier tipo de s√≠mbolos, pertenezcan al lenguaje o no.
+Los comentarios son bloques de texto que se encuentran en el source del programa, pero son ignorados por el analizador lÈxico y no generan cÛdigo intermedio. Pueden contener cualquier tipo de sÌmbolos, pertenezcan al lenguaje o no.
 
 \textsc{pycomp} utiliza los siguientes:
 
 \begin{itemize}
-	\item \textbf{Comentarios de l√≠nea}: la doble barra (``//'') comienza un comentario que termina en el fin de l√≠nea.
-	\item \textbf{Comentarios de bloque}: los comentarios de bloque comienzan cuando se detecta el primero de los s√≠mbolos, y terminan al encontrar el segundo; pueden abarcar cualquier cantidad de l√≠neas. Es importante destacar que un comentario abierto, pero no cerrado, produce un error l√©xico. Hay dos maneras de marcar los comentarios de bloque: \verb|{ y }|, o \verb|(* y *)|.
+	\item \textbf{Comentarios de lÌnea}: la doble barra (``//'') comienza un comentario que termina en el fin de lÌnea.
+	\item \textbf{Comentarios de bloque}: los comentarios de bloque comienzan cuando se detecta el primero de los sÌmbolos, y terminan al encontrar el segundo; pueden abarcar cualquier cantidad de lÌneas. Es importante destacar que un comentario abierto, pero no cerrado, produce un error lÈxico. Hay dos maneras de marcar los comentarios de bloque: \verb|{ y }|, o \verb|(* y *)|.
 \end{itemize}
 
-Puede verse un ejemplo de la utilizaci√≥n de los comentarios en la figura \ref{comentarios}.
+Puede verse un ejemplo de la utilizaciÛn de los comentarios en la figura \ref{comentarios}.
 
 \begin{figure}[h]
 \begin{verbatim}
@@ -154,7 +154,7 @@ BEGIN
   Write('H') // Instruccion que muestra el mensaje por pantalla 
 END.
 
-(* Aqu√≠ termina el programa *)
+(* AquÌ termina el programa *)
 \end{verbatim}
 \caption{Ejemplo del uso de comentarios}
 \label{comentarios}
@@ -162,30 +162,30 @@ END.
 
 \subsection{Identificadores}
 
-Un identificador es utilizado para dar nombre a un programa, constante, tipo, variable, funci√≥n o procedimiento.
+Un identificador es utilizado para dar nombre a un programa, constante, tipo, variable, funciÛn o procedimiento.
 \begin{verbatim}
 <identifier> ::= <letter>{<letter or digit>}
 \end{verbatim}
 
-\subsection{N√∫meros}
-Un n√∫mero es una secuencia de d√≠gitos decimales.
+\subsection{N˙meros}
+Un n˙mero es una secuencia de dÌgitos decimales.
 \begin{verbatim}
 <digit sequence> ::= <digit>{<digit>}
 \end{verbatim}
 
 
 \section{Programas}
-Todo archivo fuente v√°lido en Mini-Pascal es un programa; el programa est√° compuesto de declaraciones y sentencias, como se ver√° en las secciones siguientes del manual.
+Todo archivo fuente v·lido en Mini-Pascal es un programa; el programa est· compuesto de declaraciones y sentencias, como se ver· en las secciones siguientes del manual.
 
 \subsection{Tipos predefinidos}
-Los tipos predefinidos simples en Mini-Pascal son \texttt{char} (caracteres), \texttt{integer} (n√∫meros enteros) y \texttt{boolean} (\textbf{true} y \textbf{false}).
+Los tipos predefinidos simples en Mini-Pascal son \texttt{char} (caracteres), \texttt{integer} (n˙meros enteros) y \texttt{boolean} (\textbf{true} y \textbf{false}).
 
-Por a√±adidura, pueden declararse estructuras de tipo arreglo con el constructor \texttt{array}, como se detallar√° en la secci√≥n siguiente.
+Por aÒadidura, pueden declararse estructuras de tipo arreglo con el constructor \texttt{array}, como se detallar· en la secciÛn siguiente.
 
 \section{Declaraciones}
 
 \subsection{Constantes}
-Cuando se define una constante, el identificador utilizado se liga al valor elegido durante toda la ejecuci√≥n del programa; dicho valor no podr√° ser cambiado.
+Cuando se define una constante, el identificador utilizado se liga al valor elegido durante toda la ejecuciÛn del programa; dicho valor no podr· ser cambiado.
 
 \begin{verbatim}
 <constant definition> ::= <identifier>=<constant>
@@ -196,7 +196,7 @@ Cuando se define una constante, el identificador utilizado se liga al valor eleg
 
 \subsection{Tipos}
 
-Los tipos determinan los valores posibles que puede tener una variable en Mini-Pascal, as√≠ como las posibles operaciones que se puedan aplicar sobre este. Se asocian a un identificador.
+Los tipos determinan los valores posibles que puede tener una variable en Mini-Pascal, asÌ como las posibles operaciones que se puedan aplicar sobre este. Se asocian a un identificador.
 
 \begin{verbatim}
 <type definition> ::= <identifier>=<type>
@@ -207,9 +207,9 @@ Los tipos determinan los valores posibles que puede tener una variable en Mini-P
 
 \subsubsection{Tipos Simples}
 
-Los tipos simples cumplen con la caracter√≠stica de ocupar s√≥lo una celda de memoria. Adem√°s de los tres tipos simples predefinidos  mencionados anteriormente, Mini-Pascal permite definir \textit{subrangos}.
+Los tipos simples cumplen con la caracterÌstica de ocupar sÛlo una celda de memoria. Adem·s de los tres tipos simples predefinidos  mencionados anteriormente, Mini-Pascal permite definir \textit{subrangos}.
 
-Los \textit{subrangos} incluyen un subconjunto de valores de un tipo simple, y se definen a partir de una cota inferior y una cota superior a trav√©s de constantes; naturalmente, ambas constantes deben ser del mismo tipo simple.
+Los \textit{subrangos} incluyen un subconjunto de valores de un tipo simple, y se definen a partir de una cota inferior y una cota superior a travÈs de constantes; naturalmente, ambas constantes deben ser del mismo tipo simple.
 
 \begin{verbatim}
 <simple type> ::= <subrange type> | <type identifier>
@@ -221,7 +221,7 @@ Los \textit{subrangos} incluyen un subconjunto de valores de un tipo simple, y s
 
 \subsubsection{Tipos Compuestos}
 
-El √∫nico tipo compuesto posible dentro de Mini-Pascal es el arreglo: una serie de locaciones de memoria referenciados por √≠ndices correlativos. Tanto el √≠ndice como los elementos de los arreglos deben ser de tipos simples.
+El ˙nico tipo compuesto posible dentro de Mini-Pascal es el arreglo: una serie de locaciones de memoria referenciados por Ìndices correlativos. Tanto el Ìndice como los elementos de los arreglos deben ser de tipos simples.
 \begin{verbatim}
 <structured type> ::= <unpacked structured type>
 
@@ -236,7 +236,7 @@ El √∫nico tipo compuesto posible dentro de Mini-Pascal es el arreglo: una serie 
 
 \subsection{Variables}
 
-Las variables son una abstracci√≥n de referencias a celdas de memoria, cuyo valor puede ser cambiado en tiempo de ejecuci√≥n. Tienen un tipo determinado en tiempo de compilaci√≥n, y est√°n asociados a un identificador.
+Las variables son una abstracciÛn de referencias a celdas de memoria, cuyo valor puede ser cambiado en tiempo de ejecuciÛn. Tienen un tipo determinado en tiempo de compilaciÛn, y est·n asociados a un identificador.
 
 \begin{verbatim}
 <variable definition part> ::= <empty> | var <variable declaration>{;<variable declaration>};
@@ -246,7 +246,7 @@ Las variables son una abstracci√≥n de referencias a celdas de memoria, cuyo valo
 
 \subsection{Procedimientos}
 
-Los procedimientos pueden pensarse como subprogramas, determinados por un identificador que se utiliza para invocar m√°s tarde al procedimiento.
+Los procedimientos pueden pensarse como subprogramas, determinados por un identificador que se utiliza para invocar m·s tarde al procedimiento.
 
 \begin{verbatim}
 <procedure declaration> ::= <procedure heading><block>
@@ -254,11 +254,11 @@ Los procedimientos pueden pensarse como subprogramas, determinados por un identi
 
 \subsubsection{Encabezado de procedimiento}
 
-Adem√°s del identificador, los procedimientos pueden tener una serie de par√°metros que se determinan en tiempo de compilaci√≥n.
+Adem·s del identificador, los procedimientos pueden tener una serie de par·metros que se determinan en tiempo de compilaciÛn.
 
-Un grupo de par√°metros que tenga antepuesta la palabra \texttt{var} se tratar√° como \textit{par√°matros por refencia}; es decir, no se copiar√°n los valores en nuevas locaciones de memoria, sino que se utilizar√° la misma locaci√≥n. √âsto puede generar efectos colaterales.
+Un grupo de par·metros que tenga antepuesta la palabra \texttt{var} se tratar· como \textit{par·matros por refencia}; es decir, no se copiar·n los valores en nuevas locaciones de memoria, sino que se utilizar· la misma locaciÛn. …sto puede generar efectos colaterales.
 
-Los par√°metros que no son por referencia son denominados \textit{par√°metros por valor}. Se trata de variables que s√≥lo vivir√°n mientras se ejecute el procedimiento, y que ser√°n inicializadas a partir del valor que les sea pasado en la llamada.
+Los par·metros que no son por referencia son denominados \textit{par·metros por valor}. Se trata de variables que sÛlo vivir·n mientras se ejecute el procedimiento, y que ser·n inicializadas a partir del valor que les sea pasado en la llamada.
 
 \begin{verbatim}
 <procedure heading> ::= procedure <identifier>; | procedure <identifier>(<formal parameter section>{;<formal parameter section>});
@@ -269,7 +269,7 @@ Los par√°metros que no son por referencia son denominados \textit{par√°metros po
 \end{verbatim}
 \subsection{Funciones}
 
-Las funciones son muy parecidas a los procedimientos, con la diferencia que devuelven un valor, por lo que no son utilizadas como sentencias de por s√≠, sino que se invocan dentro del contexto de una expresi√≥n.
+Las funciones son muy parecidas a los procedimientos, con la diferencia que devuelven un valor, por lo que no son utilizadas como sentencias de por sÌ, sino que se invocan dentro del contexto de una expresiÛn.
 
 \begin{verbatim}
 <function declaration> ::= <function heading><block>
@@ -277,7 +277,7 @@ Las funciones son muy parecidas a los procedimientos, con la diferencia que devu
 
 \subsubsection{Encabezado de funciones}
 
-As√≠ como los procedimientos, las funciones est√°n asociadas a un identificador, y tienen una signatura determinada en tiempo de compilaci√≥n. Puede tener par√°metros por valor o referencia (acompa√±ados tambi√©n de sus tipos), y debe tener un tipo de resultado, que ser√° el tipo del valor que devolver√°. En Mini-Pascal, s√≥lo se aceptar√°n como tipos de resultado a los tipos simples.
+AsÌ como los procedimientos, las funciones est·n asociadas a un identificador, y tienen una signatura determinada en tiempo de compilaciÛn. Puede tener par·metros por valor o referencia (acompaÒados tambiÈn de sus tipos), y debe tener un tipo de resultado, que ser· el tipo del valor que devolver·. En Mini-Pascal, sÛlo se aceptar·n como tipos de resultado a los tipos simples.
 
 \begin{verbatim}
 <function heading> ::= function<identifier>:<result type>; | <function identifier>(<formal parameter section>{;<formal parameter section>}):<result type>;
@@ -288,11 +288,11 @@ As√≠ como los procedimientos, las funciones est√°n asociadas a un identificador,
 \section{Expresiones}
 
 
-Las expresiones denotan la computaci√≥n a llevar a cabo en una determinada sentencia. Se computan a partir de √°tomos, y generan un valor de salida, luego de haber aplicado todos los operadores con su determinado tipo.
+Las expresiones denotan la computaciÛn a llevar a cabo en una determinada sentencia. Se computan a partir de ·tomos, y generan un valor de salida, luego de haber aplicado todos los operadores con su determinado tipo.
 
 \subsection{Operadores}
 
-Los operadores que se detallar√°n son binarios (es decir, reciben dos argumentos del mismo tipo, y generan un nuevo valor a partir de ellas).
+Los operadores que se detallar·n son binarios (es decir, reciben dos argumentos del mismo tipo, y generan un nuevo valor a partir de ellas).
 
 
 \begin{verbatim}
@@ -308,17 +308,17 @@ Los operadores que se detallar√°n son binarios (es decir, reciben dos argumentos
 	 \centering
     \begin{tabular}{|l|l|l|l|}
 	    
-	    \hline \textbf{Operador} & \textbf{Operaci√≥n} & \textbf{Tipo de los operandos }& \textbf{Tipo del resultado} \\
+	    \hline \textbf{Operador} & \textbf{OperaciÛn} & \textbf{Tipo de los operandos }& \textbf{Tipo del resultado} \\
 			\hline
-	    *     & Multiplcaci√≥n & Integer y Subrango de Integers & Integer \\
+	    *     & MultiplcaciÛn & Integer y Subrango de Integers & Integer \\
 	    \hline
-	    div   & Divisi√≥n entera & Integer y Subrango de Integers & Integer \\
+	    div   & DivisiÛn entera & Integer y Subrango de Integers & Integer \\
 	    \hline
-	    and   & Conjunci√≥n l√≥gica & Booleano, y Subrango de Booleanos & Booleano \\
+	    and   & ConjunciÛn lÛgica & Booleano, y Subrango de Booleanos & Booleano \\
 	    \hline
     \end{tabular}%
   \label{tab:opmul}%
-  \caption{Operadores de multiplicaci√≥n}
+  \caption{Operadores de multiplicaciÛn}
 \end{table}%
 
 % Table generated by Excel2LaTeX from sheet 'Hoja1'
@@ -327,19 +327,19 @@ Los operadores que se detallar√°n son binarios (es decir, reciben dos argumentos
    \centering
     \begin{tabular}{|l|l|l|l|}
     \hline
-    \textbf{Operador} & \textbf{Operaci√≥n} & \textbf{Tipo de los operandos }& \textbf{Tipo del resultado} \\
+    \textbf{Operador} & \textbf{OperaciÛn} & \textbf{Tipo de los operandos }& \textbf{Tipo del resultado} \\
 		\hline
     +     & Suma  & Integer, y Subrango de Integers & Integer \\
     \hline
     
     -     & Diferencia & Integer, y Subrango de Integers & Integer \\
     \hline
-    or    & Disyunci√≥n l√≥gica & Booleano, y Subrango de Booleanos & Booleano \\
+    or    & DisyunciÛn lÛgica & Booleano, y Subrango de Booleanos & Booleano \\
     \hline
     \end{tabular}%
   \label{tab:opsum}%
   
-  \caption{Operadores de adici√≥n}
+  \caption{Operadores de adiciÛn}
 \end{table}%
 
 % Table generated by Excel2LaTeX from sheet 'Hoja1'
@@ -348,7 +348,7 @@ Los operadores que se detallar√°n son binarios (es decir, reciben dos argumentos
   
     \begin{tabular}{|l|l|l|l|}
     \hline
-    \textbf{Operador} & \textbf{Operaci√≥n} & \textbf{Tipo de los operandos }& \textbf{Tipo del resultado} \\
+    \textbf{Operador} & \textbf{OperaciÛn} & \textbf{Tipo de los operandos }& \textbf{Tipo del resultado} \\
     \hline
     \textless \textgreater    & Distinto & Integer,Caracteres y Subrango & Booleano \\
     \hline
@@ -372,7 +372,7 @@ Los operadores que se detallar√°n son binarios (es decir, reciben dos argumentos
 
 \subsection{Factores}
 
-Los √°tomos a partir de los cuales se calculan las expresiones son denominados \textsl{factores}. Si el factor es un literal num√©ricos, un caracter, o una constante, los valores se determinar√°n en tiempo de compilaci√≥n; en caso de que el factor sea una variables, un componente de una variables de tipo estructurado o una llamada a funci√≥n, su valore ser√° computado en tiempo de ejecuci√≥n. Finalmente, puede haber valores booleanos negados, utilizando el operador \textsl{not}, y expresiones completas encerradas entre par√©ntesis.
+Los ·tomos a partir de los cuales se calculan las expresiones son denominados \textsl{factores}. Si el factor es un literal numÈricos, un caracter, o una constante, los valores se determinar·n en tiempo de compilaciÛn; en caso de que el factor sea una variables, un componente de una variables de tipo estructurado o una llamada a funciÛn, su valore ser· computado en tiempo de ejecuciÛn. Finalmente, puede haber valores booleanos negados, utilizando el operador \textsl{not}, y expresiones completas encerradas entre parÈntesis.
 
 \begin{verbatim}
 <factor> ::= <variable> | <unsigned constant> | <function designator> | (<expression>) | not <factor> | <char>
@@ -380,11 +380,11 @@ Los √°tomos a partir de los cuales se calculan las expresiones son denominados \
 <unsigned constant> ::= <unsigned number> | <constant identifier>
 \end{verbatim}
 
-\subsubsection{Llamadas a funci√≥n}
+\subsubsection{Llamadas a funciÛn}
 
-Las llamadas a funci√≥n son realizadas en una expresi√≥n, anteponiendo el identificador de la funci√≥n, a sus par√°metros actuales, en caso de tenerlos. Cuando se encuentra un identificar de funci√≥n, se llama a la funci√≥n, y se ejecuta, con los par√°metros dados. La funci√≥n devolver√° un valor del tipo con el que fue declarado, y este valor se utiliza luego normalmente en la expresi√≥n.
+Las llamadas a funciÛn son realizadas en una expresiÛn, anteponiendo el identificador de la funciÛn, a sus par·metros actuales, en caso de tenerlos. Cuando se encuentra un identificar de funciÛn, se llama a la funciÛn, y se ejecuta, con los par·metros dados. La funciÛn devolver· un valor del tipo con el que fue declarado, y este valor se utiliza luego normalmente en la expresiÛn.
 
-Los par√°metros actuales ser√°n explicados luego, en la secci√≥n de procedimientos.
+Los par·metros actuales ser·n explicados luego, en la secciÛn de procedimientos.
 
 \begin{verbatim}
 <function designator> ::= <function identifier> | <function identifier>(<actual parameter>{,<actual parameter>})
@@ -392,9 +392,8 @@ Los par√°metros actuales ser√°n explicados luego, en la secci√≥n de procedimient
 <function identifier> ::= <identifier>
 \end{verbatim}
 
-\subsection{Expresiones simples}
-
-Las expresiones siguen se computan a partir de los factores, aplicando las operaciones, siguiendo la sintaxis especificada en la secci√≥n de la gram√°tica siguiente.
+\subsection{Formato}
+Vistos los operadores y los factores, pasamos ahora a ver el formato de las expresiones que denotan el c·lculo a realizar:
 
 \begin{verbatim}
 <expression> ::= <simple expression> | <simple expression><relational operator><simple expression>
@@ -406,7 +405,7 @@ Las expresiones siguen se computan a partir de los factores, aplicando las opera
 
 \section{Sentencias}
 
-Las sentencias denotan qu√© es lo que debe hacer el programa especificando acciones a realizar.
+Las sentencias denotan quÈ es lo que debe hacer el programa especificando acciones a realizar.
 
 \begin{verbatim}
 <statement> ::= <unlabelled statement>
@@ -415,7 +414,7 @@ Las sentencias denotan qu√© es lo que debe hacer el programa especificando accio
 \end{verbatim}
 
 \subsection{Sentencias Simples}
-Las sentencias simples componen los bloques de programa en el lenguaje Mini-Pascal. S√≥lo se contar√° con asignaciones o llamadas a procedimientos. A su vez, una sentencia simple puede ser vac√≠a.
+Las sentencias simples componen los bloques de programa en el lenguaje Mini-Pascal. SÛlo se contar· con asignaciones o llamadas a procedimientos. A su vez, una sentencia simple puede ser vacÌa.
 
 \begin{verbatim}
 <simple statement> ::= <assignment statement> | <procedure statement> | <empty statement>
@@ -425,9 +424,9 @@ Las sentencias simples componen los bloques de programa en el lenguaje Mini-Pasc
 
 \subsubsection{Asignaciones}
 
-Las asignaciones son sentencias que modifican el valor de una variable, o de un componente de una variable de tipo estructurado. Para esto se calcula el valor de una expresi√≥n, cuyo tipo debe coincidir con el tipo de la variable.
+Las asignaciones son sentencias que modifican el valor de una variable, o de un componente de una variable de tipo estructurado. Para esto se calcula el valor de una expresiÛn, cuyo tipo debe coincidir con el tipo de la variable.
 
-Existe el caso especial de la asignaci√≥n de valores de retorno de una funci√≥n. En este caso, en vez de utilizar el nombre de una variable al principio de una asignaci√≥n, se pone el nombre de la funci√≥n del mismo nivel l√©xico. El valor que retorne la expresi√≥n ser√° el valor que devuelva la funci√≥n, en el lugar donde haya sido llamada.
+Existe el caso especial de la asignaciÛn de valores de retorno de una funciÛn. En este caso, en vez de utilizar el nombre de una variable al principio de una asignaciÛn, se pone el nombre de la funciÛn del mismo nivel lÈxico. El valor que retorne la expresiÛn ser· el valor que devuelva la funciÛn, en el lugar donde haya sido llamada.
 
 \begin{verbatim}
 <assignment statement> ::= <variable>:=<expression> | <function identifier>:=<expression>
@@ -447,11 +446,11 @@ Existe el caso especial de la asignaci√≥n de valores de retorno de una funci√≥n.
 
 \subsubsection{Llamadas a procedimiento}
 
-Los procedimientos son llamados anteponiendo su identificador antes de la lista de par√°metros actuales. Estos √∫ltimos van entre par√©ntesis, y separados por comas. Es necesario enviar tantos par√°metros actuales como par√°metros formales tenga el procedimento invocado, y los tipos de cada uno de ellos deben coincidir.
+Los procedimientos son llamados anteponiendo su identificador antes de la lista de par·metros actuales. Estos ˙ltimos van entre parÈntesis, y separados por comas. Es necesario enviar tantos par·metros actuales como par·metros formales tenga el procedimento invocado, y los tipos de cada uno de ellos deben coincidir.
 
-Los par√°metros actuales son expresiones a las que se les calcula el valor resultante, y √©ste ser√° el valor que tomar√° el par√°metro que tenga la misma posici√≥n.
+Los par·metros actuales son expresiones a las que se les calcula el valor resultante, y Èste ser· el valor que tomar· el par·metro que tenga la misma posiciÛn.
 
-Existe el caso especial de los par√°metros por referencia, en el cual los par√°metros actuales deber√°n ser variables, o componentes de variables de tipo estructurado. Se debe tener en cuenta que una variable pasada por referencia puede cambiar su valor dentro del procedimiento, y dicho cambio ser√° persistente.
+Existe el caso especial de los par·metros por referencia, en el cual los par·metros actuales deber·n ser variables, o componentes de variables de tipo estructurado. Se debe tener en cuenta que una variable pasada por referencia puede cambiar su valor dentro del procedimiento, y dicho cambio ser· persistente.
 
 
 \begin{verbatim}
@@ -464,7 +463,7 @@ Existe el caso especial de los par√°metros por referencia, en el cual los par√°m
 
 \subsection{Sentencias Estructuradas}
 
-Las sentencias estructuradas pueden ser sentencias compuestas (sentencias agrupadas entre los delimitadores \texttt{begin} y \texttt{end}), o sentencias especiales que permiten alterar el flujo de control en el programa fuente; las √∫nicas sentencias disponibles en Mini-Pascal de este estilo son el condicional \texttt{if} y el bucle \texttt{while}. El cuerpo de estas sentencias es, a su vez, otra sentencia simple o compuesta.
+Las sentencias estructuradas pueden ser sentencias compuestas (sentencias agrupadas entre los delimitadores \texttt{begin} y \texttt{end}), o sentencias especiales que permiten alterar el flujo de control en el programa fuente; las ˙nicas sentencias disponibles en Mini-Pascal de este estilo son el condicional \texttt{if} y el bucle \texttt{while}. El cuerpo de estas sentencias es, a su vez, otra sentencia simple o compuesta.
 
 
 \begin{verbatim}
@@ -473,39 +472,39 @@ Las sentencias estructuradas pueden ser sentencias compuestas (sentencias agrupa
 \end{verbatim}
 
 \subsubsection{Condicionales}
-Las sentencias condicionales bifurcan el flujo de control en un programa; √∫nicamente se ejecutar√° el grupo de sentencias contenidas en la secci√≥n marcada por \texttt{then} si la expresi√≥n condicional booleana resulta verdadera al ser evaluada. En caso de que la evaluaci√≥n de dicha condici√≥n resulte falsa, se ejecutar√° la secci√≥n del \texttt{else} si √©sta est√° presente. Posteriormente, se resumir√° la ejecuci√≥n con la sentencia siguiente a las del condicional.
+Las sentencias condicionales bifurcan el flujo de control en un programa; ˙nicamente se ejecutar· el grupo de sentencias contenidas en la secciÛn marcada por \texttt{then} si la expresiÛn condicional booleana resulta verdadera al ser evaluada. En caso de que la evaluaciÛn de dicha condiciÛn resulte falsa, se ejecutar· la secciÛn del \texttt{else} si Èsta est· presente. Posteriormente, se resumir· la ejecuciÛn con la sentencia siguiente a las del condicional.
 \begin{verbatim}
 <conditional statement> ::= <if statement>
 
 <if statement> ::= if <expression> then <statement> | if <expression> then <statement> else <statement>
 \end{verbatim}
 \subsubsection{Sentencias repetitivas}
-El bucle \texttt{while} permite ejecutar un conjunto de sentencias repetidas veces dependiendo de una condici√≥n booleana; mientras la evaluaci√≥n de la expresi√≥n condicional resulte verdadera, todas las sentencias dentro del cuerpo del bucle se ejecutar√°n una vez m√°s. Una vez que la expresi√≥n condicional resulta falsa, se prosigue ejecutando la sentencia siguiente al bucle.
+El bucle \texttt{while} permite ejecutar un conjunto de sentencias repetidas veces dependiendo de una condiciÛn booleana; mientras la evaluaciÛn de la expresiÛn condicional resulte verdadera, todas las sentencias dentro del cuerpo del bucle se ejecutar·n una vez m·s. Una vez que la expresiÛn condicional resulta falsa, se prosigue ejecutando la sentencia siguiente al bucle.
 \begin{verbatim}
 <repetitive statement> ::= <while statement>
 
 <while statement> ::= while <expression> do <statement>
 \end{verbatim}
 
-\chapter{Decisiones de dise√±o}
+\chapter{Decisiones de diseÒo}
 
-Dado que algunas situaciones no est√°n consideradas completamente en la especificaci√≥n de Mini-Pascal, se tomaron algunas decisiones de dise√±o para que el comportamiento del compilador sea consistente. Podemos destacar:
+Dado que algunas situaciones no est·n consideradas completamente en la especificaciÛn de Mini-Pascal, se tomaron algunas decisiones de diseÒo para que el comportamiento del compilador sea consistente. Podemos destacar:
 
 \begin{itemize}
-	\item {\bf Asignaci√≥n de arreglos}: se considera que una variable de tipo arreglo puede ser asignada a otra {\bf si y s√≥lo si}:
+	\item {\bf AsignaciÛn de arreglos}: se considera que una variable de tipo arreglo puede ser asignada a otra {\bf si y sÛlo si}:
 		\begin{enumerate}
 			\item{Ambos arreglos poseen exactamente la misma cantidad de elementos.}
 			\item{Los componentes de los arreglos son de tipos compatibles.}
 		\end{enumerate}
 		Dos tipos se consideran compatibles cuando se refieren al mismo tipo base; por ejemplo, dos subrangos de enteros diferentes.
-	\item {\bf Valores booleanos}: se considera que la constante \texttt{false} es ``menor'' ordinalmente a la constante \texttt{true}. Esto define la sem√°ntica de las operaciones \texttt{succ}, \texttt{pred}, y el conjunto de subrangos booleanos posibles a declarar.
-	\item {\bf Warnings}: si bien no necesariamente implican errores (pues el programa es sint√°ctica y sem√°nticamente correcto), se decidi√≥ incluir \emph{warnings} cuando una variable no es inicializada antes de referenciarla, dado que el valor de dicha variable resulta, de esta manera, indefinido, y ese comportamiento no es usualmente deseado por el usuario.
+	\item {\bf Valores booleanos}: se considera que la constante \texttt{false} es ``menor'' ordinalmente a la constante \texttt{true}. Esto define la sem·ntica de las operaciones \texttt{succ}, \texttt{pred}, y el conjunto de subrangos booleanos posibles a declarar.
+	\item {\bf Warnings}: si bien no necesariamente implican errores (pues el programa es sint·ctica y sem·nticamente correcto), se decidiÛ incluir \emph{warnings} cuando una variable no es inicializada antes de referenciarla, dado que el valor de dicha variable resulta, de esta manera, indefinido, y ese comportamiento no es usualmente deseado por el usuario.
 
-	De la misma manera, si se escribi√≥ una funci√≥n o procedimiento que no es utilizada, o bien ese c√≥digo es (de momento) in√∫til, o bien el usuario olvid√≥ escribir la parte del programa encargada de usar dicho procedimiento. De cualquier manera, tambi√©n se muestra un \emph{warning} para ayudar al usuario a detectar de manera anticipada estos posibles errores.
+	De la misma manera, si se escribiÛ una funciÛn o procedimiento que no es utilizada, o bien ese cÛdigo es (de momento) in˙til, o bien el usuario olvidÛ escribir la parte del programa encargada de usar dicho procedimiento. De cualquier manera, tambiÈn se muestra un \emph{warning} para ayudar al usuario a detectar de manera anticipada estos posibles errores.
 \end{itemize}
 
 \begin{thebibliography}{9}
-\addcontentsline{toc}{chapter}{Bibliograf√≠a}
+\addcontentsline{toc}{chapter}{BibliografÌa}
 \bibitem{aho}
   Alfred V. Aho, Monica S. Lam, Ravi Sethi, Jeffrey D. Ullman
   \emph{Compilers: principles, techniques, and tools}.
@@ -514,13 +513,13 @@ Dado que algunas situaciones no est√°n consideradas completamente en la especifi
   2007.
   
 \bibitem{enunciado}
-	C√°tedra de Compiladores e Int√©rpretes, DCIC, UNS
-	\emph{Proyecto N¬∫1: Compilador de Mini-Pascal-S}
+	C·tedra de Compiladores e IntÈrpretes, DCIC, UNS
+	\emph{Proyecto N∫1: Compilador de Mini-Pascal-S}
 	2010
 	
 \bibitem{consideraciones}
-	C√°tedra de Compiladores e Int√©rpretes, DCIC, UNS
-	\emph{Convenciones para la entrega final del Proyecto N¬∫1}
+	C·tedra de Compiladores e IntÈrpretes, DCIC, UNS
+	\emph{Convenciones para la entrega final del Proyecto N∫1}
 	2010
 
 \end{thebibliography}
